# pbig

./: .gitignore  README.md
benchmarks/: README  go.sh
benchmarks/test1/: filter_file  proc_test1.sh  test1.set  test1.set.csv
benchmarks/test2/: filter_file  proc_test2.sh  test2.set  test2.set.csv
benchmarks/test3/: filter_file  test3.set  test3.set.csv
package/: CMakeLists.txt  Makefile  README  cmake_install.cmake  main.cc  pbig.h  rect.h  report.cc
src/pbig/: CMakeLists.txt  Makefile  README  cmake_install.cmake  config.cmake  cuda_comm.h  decode.cc  hybrid.cc  hybrid.h  install_manifest.txt  log.h  main.cc  object.cc  object.h  pbig.cu  pbig_internal.h  rect.h  report.h  run.sh  test.sh
